Fix double scrollbar

--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -1,5 +1,5 @@
 .contacts {
-    height: 100%;
+    min-height: 100%;
 }
 
 .contacts h1 {
