--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -3,6 +3,12 @@
     min-height: calc(100vh - 120px);
     height: 100%;
     overflow-x: hidden;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+
+.layout > .content::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
 }
 
 @media screen and (max-width: 600px) {
